fixed screen overflow issue

--- a/src/calculator.css
+++ b/src/calculator.css
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
     display: flex;
     flex-direction: column;
     background-color: #757575;
@@ -6,6 +6,7 @@
     margin: 20px auto;
     width: 300px;
     padding: 3px;
+    box-shadow: 0px 16px 24px 2px rgba(0,0,0,0.14) , 0px 6px 30px 5px rgba(0,0,0,0.12) , 0px 8px 10px -7px rgba(0,0,0,0.2) ;
 }
 
 .screen {
@@ -21,7 +22,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
     justify-items: center;
-    gap: 1px;
+    gap: 3px;
     background-color: #757575;
     color: #fff;
 }
@@ -33,7 +34,8 @@
     background-color: #acacac;
     color: #fff;
     cursor: pointer;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    box-shadow: -2px -4px 0px 0px #0006 inset, 2px 2px 0px 0px #fff7 inset;
 }
 
 .btn:hover {
@@ -41,9 +43,5 @@
 }
 
 .dot {
-    font-size: 1.6rem;
-    
+    font-size: 1.8rem;
 }
-
-
-
